# FlyAR

./: .gitignore  AccelerometerAndPressureDataAtRest.xlsx  README.md  SerialSample.py  Shapes.py  SharedMemoryReader.py  SharedMemoryTest  TestAutoAdjust.py  TestSenseHat.py  _config.yml  index.html  index.md  params.json  pi_at_rest.csv
Console-Application/FlyAR-Application/: FlyAR-Application.pro  flyar.cpp  flyar.h  main.cpp  mainwindow.cpp  mainwindow.h  objtable.cpp  objtable.h  tablewindow.cpp  tablewindow.h
Console-Application/TestData/: BestDataPoints.txt  Data.txt  DataPoints.txt  DataPoints2.txt  DataPoints3.txt  DataPoints4.txt  DataPoints5.txt  NewDataPoints.txt  NewRadius.txt  TestData.txt  example.txt
Console-Application/TestGrid/: TestGrid.pro  main.cpp
Hardware-Arduino/: Arduino_Micro_GY-86_NS-HP.ino  MPU6050.h
Hardware-Arduino/Arduino_Micro_GY-86_NS-HP/: FlyAR.c  FlyAR.h  (+6 more)
Hardware-Arduino/jrowberg_i2cdevlib_example/MPU6050DMP6_HMC5883L/: CMakeLists.txt  HMC5883L.cpp  MPU6050DMP6_HMC5883L.ino  MPU6050_DMP_mag.ino
Miscellaneous/: SharedMemoryTest.c
Pi-Software/: 3dviewer.py  ConfigParser.py  DistanceCalibrator.py  FlyAR.py  FlyARShape.py  SerialSample.py  TestAutoAdjust.py  accelerationcalculator.py  arduinoreader.py  cmdline.txt  configparser.py  datacalculator.py  dataretriever.py  flyar.py  flyarshape.py  positionreader.py  sensehatreader.py  serialsample.py  shared_memory_keys.flyar  smclear.py  startup.sh  updater.py
_layouts/: post.html
_posts/: 2016-10-11-FirstPost.md  2016-10-11-welcome.md  2016-10-28-coordinate-conversions.md
(+34 files in other folders)
